--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </nav>
   <main id="home">
     <picture>
-      <img src="images/profile.jpg" alt="profile Image">
+      <img src="images/profile2.jpg" alt="profile Image">
     </picture>
     <section>
       <h1>About Me</h1>
